--- a/PRY-Proyecto Parcial 1/views/ver_perfil.html
+++ b/PRY-Proyecto Parcial 1/views/ver_perfil.html
@@ -22,8 +22,8 @@
             </div>
         </div>
         <div class="d-flex gap-2">
-            <a href="index.html" class="btn btn-primary">Volver al Inicio</a>
-            <a href="crear_perfil.html" class="btn btn-success">Editar Perfil</a>
+            <button onclick="cambiarPagina('./views/inicio.html')" class="btn btn-primary">Volver al Inicio</button>
+            <button onclick="cambiarPagina('./views/crear_perfil.html')" class="btn btn-success">Editar Perfil</button>
         </div>
     </div>
 </div>
