--- a/PRY-Proyecto Parcial 1/views/crear_perfil.html
+++ b/PRY-Proyecto Parcial 1/views/crear_perfil.html
@@ -64,7 +64,7 @@
         <div class="mb-3">
             <label class="form-label">Foto</label>
             <div class="d-flex gap-2 mb-2">
-                <button type="button" class="btn btn-success" id="btn-foto" onclick="tomarFoto()" disabled>
+                <button type="button" class="btn btn-success" id="btn_foto" onclick="tomarFoto()">
                     Tomar Foto
                 </button>
             </div>
@@ -75,7 +75,7 @@
         <div class="mb-3">
             <label class="form-label">Ubicación</label>
             <div class="d-flex gap-2">
-                <button type="button" class="btn btn-primary" id="btn-ubicacion" onclick="obtenerUbicacion()">
+                <button type="button" class="btn btn-primary" id="btn_ubicacion" onclick="obtenerUbicacion()">
                     Obtener Ubicación
                 </button>
 
