--- a/PRY-Proyecto Parcial 1/views/crear_perfil.html
+++ b/PRY-Proyecto Parcial 1/views/crear_perfil.html
@@ -26,21 +26,41 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-3">
+            <label for="validationCustom04" class="form-label">Provincia</label>
+            <select class="form-select" id="validationCustom04" required>
+                <option selected disabled value="">Elige...</option>
+                <option>Pichincha</option>
+                <option>Guayas</option>
+                <option>Azuay</option>
+                <option>Manabí</option>
+                <option>El Oro</option>
+                <option>Los Ríos</option>
+                <option>Esmeraldas</option>
+                <option>Carchi</option>
+                <option>Imbabura</option>
+                <option>Bolívar</option>
+                <option>Cotopaxi</option>
+                <option>Chimborazo</option>
+                <option>Pastaza</option>
+                <option>Tungurahua</option>
+                <option>Morona Santiago</option>
+                <option>Orellana</option>
+                <option>Sucumbíos</option>
+                <option>Napo</option>
+                <option>Santa Elena</option>
+                <option>Loja</option>
+                <option>Galápagos</option>
+            </select>
+            <div class="invalid-feedback">
+                Por favor selecciona una provincia válida.
+            </div>
+        </div>
         <div class="col-md-6">
             <label for="validationCustom03" class="form-label">Ciudad</label>
             <input type="text" class="form-control" id="validationCustom03" placeholder="Ciudad" required>
             <div class="invalid-feedback">
                 Por favor ingresa una ciudad válida.
-            </div>
-        </div>
-        <div class="col-md-3">
-            <label for="validationCustom04" class="form-label">Provincia</label>
-            <select class="form-select" id="validationCustom04" required>
-                <option selected disabled value="">Elige...</option>
-                <option>...</option>
-            </select>
-            <div class="invalid-feedback">
-                Por favor selecciona una provincia válida.
             </div>
         </div>
         <div class="col-md-3">
@@ -62,6 +82,7 @@
             </div>
         </div>
         <div class="mb-3">
+
             <label class="form-label">Foto</label>
             <div class="d-flex gap-2 mb-2">
                 <button type="button" class="btn btn-success" id="btn_foto" onclick="tomarFoto()">
@@ -72,22 +93,17 @@
             <canvas id="foto" width="500px" height="371px" style="border: 2px solid black;"></canvas>
             <img id="photo" class="d-none img-fluid mb-2" alt="Tu foto">
         </div>
+        <button onclick="actualizarPagina('./views/crear_perfil.html')" class="btn btn-primary">Actualizar</button>
+
         <div class="mb-3">
             <label class="form-label">Ubicación</label>
-            <div class="d-flex gap-2">
-                <button type="button" class="btn btn-primary" id="btn_ubicacion" onclick="obtenerUbicacion()">
-                    Obtener Ubicación
-                </button>
-
-            </div>
             <div id="map">
-
             </div>
-            <small id="locationInfo" class="form-text text-muted"></small>
+            <input type="hidden" id="locationInfo" value="">
         </div>
         <div class="d-flex gap-2">
             <button onclick="validarFormulario()" type="submit" class="btn btn-success">Guardar Perfil</button>
-            <button onclick="cambiarPagina('./views/inicio.html')" class="btn btn-secondary">Volver</button>
+            <a onclick="cambiarPagina('./views/inicio.html')" class="btn btn-secondary">Volver</a>
         </div>
     </form>
 </div>
