--- a/PRY-Proyecto Parcial 1/views/inicio.html
+++ b/PRY-Proyecto Parcial 1/views/inicio.html
@@ -4,6 +4,9 @@
         <p class="lead mb-5">
             Esta aplicación te permite crear y gestionar tu perfil personal utilizando
             tecnologías web modernas como geolocalización y acceso a la cámara.
+            Puedes crear un perfil, ver tus datos y guardar tu ubicación actual.
+            Además, puedes tomar una foto con tu cámara y asociarla a tu perfil.
+
         </p>
         <div class="row justify-content-center gap-3">
             <div class="col-md-3">
@@ -16,7 +19,7 @@
                     <i class="bi bi-person"></i> Ver Perfil
                 </button>
             </div>
-            <br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br>
         </div>
     </div>
 </div>
