--- a/PRY-Proyecto Parcial 1/views/registro.html
+++ b/PRY-Proyecto Parcial 1/views/registro.html
@@ -73,10 +73,10 @@
         </div>
         <p class="text-white-50 mt-5 mb-0">Datos de Acceso</p>
         <div class="col-md-6">
-            <label for="validationCustomUsername" class="form-label">Nombre de Usuario</label>
+            <label for="USERNAME" class="form-label">Nombre de Usuario</label>
             <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend">@</span>
-                <input type="text" class="form-control" id="validationCustomUsername"
+                <input type="text" class="form-control" id="USERNAME"
                     aria-describedby="inputGroupPrepend" placeholder="Nombre de Usuario" required>
                 <div class="invalid-feedback">
                     Por favor ingresa un nombre de usuario válido.
@@ -84,10 +84,10 @@
             </div>
         </div>
         <div class="col-md-6">
-            <label for="validationCustomUsername" class="form-label">Contraseña</label>
+            <label for="PASSWORD" class="form-label">Contraseña</label>
             <div class="input-group has-validation">
                 <span class="input-group-text" id="inputGroupPrepend">*</span>
-                <input type="password" class="form-control" id="validationCustomPassword"
+                <input type="password" class="form-control" id="PASSWORD"
                     aria-describedby="inputGroupPrepend" placeholder="Contraseña" required>
                 <div class="invalid-feedback">
                     Por favor ingresa una contraseña válida.
@@ -95,8 +95,8 @@
             </div>
         </div>
         <div class="col-md-6">
-            <label for="validationCustom06" class="form-label">Correo</label>
-            <input type="text" id="validationCustom06" class="form-control" placeholder="Ingrese su correo"
+            <label for="EMAIL" class="form-label">Correo</label>
+            <input type="text" id="EMAIL" class="form-control" placeholder="Ingrese su correo"
                 aria-label="Recipient’s username" aria-describedby="basic-addon2" name="correo" required>
 
             <div class="invalid-feedback">
@@ -118,7 +118,7 @@
         <p class="text-white-50 mt-5 mb-0">Foto de perfil</p>
         <div class="mb-3">
             <div class="d-flex gap-2 mt-2 mb-2">
-                <button type="button" class="btn btn-outline-primary col-5" id="btn_foto" onclick="iniciarCamara()"
+                <button type="button" class="btn btn-outline-primary col-6" id="btn_foto" onclick="iniciarCamara()"
                     data-bs-toggle="modal" data-bs-target="#exampleModal">Tomar Foto
                 </button>
             </div>
@@ -154,7 +154,7 @@
         <p class="text-white-50 mt-3 mb-0">Ubicación</p>
         <div class="mb-3">
             <div class="d-flex gap-2 mt-2 mb-2">
-                <button type="button" class="btn btn-outline-primary col-5" id="btn_foto" onclick="getLocation()"
+                <button type="button" class="btn btn-outline-primary col-6" id="btn_location" onclick="getLocation()"
                     data-bs-toggle="modal" data-bs-target="#exampleModal2">Obtener Ubicación
                 </button>
             </div>
@@ -178,20 +178,35 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-outline-secondary"
                                 data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-outline-primary" onclick="getLocation()">Obtener 
+                            <button id="btn_obtener_ubicacion" type="button" class="btn btn-outline-primary" onclick="getLocation()">Obtener 
                                 Ubicación</button>
                         </div>
                     </div>
                 </div>
             </div>
-
+        </div>
+        <!-- modal para mostrar la confirmación de registro -->
+         <!-- NO SIRVE XD creo q toca crear de nuevo el modal
+          en guardar_usuario.js esta el mostrar modal q intente hacer -->
+        <div class="modal fade" id="modalRegistroExitoso" tabindex="-1" aria-labelledby="modalRegistroExitosoLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content bg-dark text-white">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalRegistroExitoso">Registro Exitoso</h5>
+                        <button type="button" class="btn-close text-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Tu registro se ha realizado con éxito.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="cerrarModalRegistro" type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="d-flex p-2">
-            <button onclick="validarFormulario()" class="btn btn-primary col-3 m-2">Guardar Perfil</button>
-            <a onclick="cambiarPagina('./views/inicio.html')" class="btn btn-outline-secondary col-3 m-2">Volver</a>
+            <button onclick="validarFormularioRegistro()" class="btn btn-primary col-3 m-2">Guardar Perfil</button>
+            <a onclick="cambiarPagina('./views/login.html')" class="btn btn-outline-secondary col-3 m-2">Volver</a>
         </div>
     </form>
 </div>
-<script>
-    location.reload();
-</script>
