--- a/PRY-Proyecto Parcial 1/views/registro.html
+++ b/PRY-Proyecto Parcial 1/views/registro.html
@@ -205,7 +205,7 @@
             </div>
         </div>
         <div class="d-flex p-2">
-            <button onclick="validarFormularioRegistro()" class="btn btn-primary col-3 m-2">Guardar Perfil</button>
+            <button type="button" onclick="validarFormularioRegistro()" class="btn btn-primary col-3 m-2">Guardar Perfil</button>
             <a onclick="cambiarPagina('./views/login.html')" class="btn btn-outline-secondary col-3 m-2">Volver</a>
         </div>
     </form>
