--- a/PRY-Proyecto Parcial 1/views/registro.html
+++ b/PRY-Proyecto Parcial 1/views/registro.html
@@ -185,21 +185,19 @@
                 </div>
             </div>
         </div>
-        <!-- modal para mostrar la confirmación de registro -->
-         <!-- NO SIRVE XD creo q toca crear de nuevo el modal
-          en guardar_usuario.js esta el mostrar modal q intente hacer -->
         <div class="modal fade" id="modalRegistroExitoso" tabindex="-1" aria-labelledby="modalRegistroExitosoLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content bg-dark text-white">
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalRegistroExitoso">Registro Exitoso</h5>
-                        <button type="button" class="btn-close text-light" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" onclick="cambiarPagina('./views/login.html')" class="btn-close text-light" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <p>Tu registro se ha realizado con éxito.</p>
                     </div>
                     <div class="modal-footer">
-                        <button id="cerrarModalRegistro" type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button id="cerrarModalRegistro" type="button" class="btn btn-outline-secondary" 
+                        data-bs-dismiss="modal" onclick="cambiarPagina('./views/login.html')">Cerrar</button>
                     </div>
                 </div>
             </div>
