--- a/PRY-Proyecto Parcial 1/views/inicio.html
+++ b/PRY-Proyecto Parcial 1/views/inicio.html
@@ -1,24 +1,26 @@
 <div class="container py-5">
     <div class="text-center">
-        <h1 class="display-4 mb-4">Bienvenido a Mi Perfil App</h1>
-        <p class="lead mb-5">
-            Esta aplicación te permite crear y gestionar tu perfil personal utilizando
-            tecnologías web modernas como geolocalización y acceso a la cámara.
-            Puedes crear un perfil, ver tus datos y guardar tu ubicación actual.
-            Además, puedes tomar una foto con tu cámara y asociarla a tu perfil.
-
+        <h1 class="display-4 mb-4 text-white">Bienvenido a Mi plataforma de gestión  de canciones</h1>
+        <p class="lead mb-5 text-white">
+            Esta aplicación te permite gestionar tus canciones de manera eficiente.
+            <br>
+            Puedes crear tu perfil, ver tus datos y explorar las canciones que has registrado.
+            <br>
+            Te permite agregar, ver, editar y eliminar canciones.
+            <br>
+            Además de poder ver los perfiles de otros usuarios y las canciones que han registrado.
+            <br>
+            Asegúrate de tener tu perfil creado para comenzar a disfrutar de todas las funcionalidades.
+            <br>
+            Si aún no tienes un perfil, puedes crearlo fácilmente haciendo clic en el botón a continuación.
         </p>
         <div class="row justify-content-center gap-3">
             <div class="col-md-3">
-                <button  class="btn btn-primary btn-lg w-100" onclick="cambiarPagina('./views/crear_perfil.html')">
+                <button  class="btn btn-primary btn-lg w-100" onclick="cambiarPagina('./views/registro.html')">
                     <i class="bi bi-person-plus"></i> Crear Perfil
                 </button>
             </div>
-            <div class="col-md-3">
-                <button class="btn btn-success btn-lg w-100" onclick="cambiarPagina('./views/ver_perfil.html')">
-                    <i class="bi bi-person"></i> Ver Perfil
-                </button>
-            </div>
+            
             <br><br><br><br><br><br><br>
         </div>
     </div>
